# dawos-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  release.yml
api/reference/: index.html
api/validation-rules/: index.html
dawos_agent/: __init__.py  __main__.py  app.py  auth.py  config.py  constants.py  events.py  logging.py  metrics.py  middleware.py  rbac.py  retry.py  webhooks.py
dawos_agent/models/: __init__.py  schemas.py
dawos_agent/routers/: __init__.py  audit_router.py  auth_mgmt_router.py  bulk_router.py  checkpoint.py  config_router.py  conntrack_router.py  csv_export_router.py  dhcp_router.py  diagnostics.py  dns_forwarding.py  event_router.py  firewall.py  flow_router.py  fw_groups_router.py  health.py  ip_pool_router.py  limits_router.py  lldp_router.py  logs.py  metrics_router.py  monitoring_router.py  network.py  ntp.py  pado_router.py  playbooks_router.py  pppoe.py  pppoe_config_router.py  radius.py  routing.py  scheduler.py  service.py  session_control.py  session_history_router.py  sessions.py  system.py  traffic.py  vrrp_router.py  ws.py  zone_router.py
dawos_agent/services/: __init__.py  accel.py  bulk.py  config_manager.py  config_validator.py  connection_limits.py  conntrack.py  csv_export.py  dhcp.py  diagnostics.py  dns_forwarding.py  event_handler.py  firewall.py  firewall_groups.py  flow_accounting.py  ip_pool.py  lldp.py  logs.py  monitoring.py  nat.py  network.py  ntp.py  pado_delay.py  playbooks.py  pppoe.py  pppoe_config.py  radius.py  routing.py  scheduler.py  session_control.py  session_history.py  system.py  traffic.py  vrrp.py  zone_firewall.py
deploy/: dawos-agent.sudoers
development/changelog/: index.html
development/contributing/: index.html
development/decisions/: index.html
development/security/: index.html
docs/: API.md  CONFIGURATION.md  INSTALLATION.md  index.md
docs/api/: reference.md  validation-rules.md
docs/development/: changelog.md  contributing.md  decisions.md  security.md
docs/getting-started/: configuration.md  installation.md
docs/guides/: kernel-tuning.md  monitoring.md  production-hardening.md  troubleshooting.md  upgrade.md
docs/testing/: integration-test-report.md  test-report.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
guides/kernel-tuning/: index.html
guides/monitoring/: index.html
guides/production-hardening/: index.html
guides/troubleshooting/: index.html
guides/upgrade/: index.html
scripts/: install.sh  manage.sh
search/: search_index.json
stylesheets/: extra.css
systemd/: dawos-agent.service
testing/integration-test-report/: index.html
testing/test-report/: index.html
tests/: conftest.py  test_accel_async.py  test_accel_service.py  test_app.py  test_audit.py  test_auth.py  test_auth_mgmt_router.py  test_bulk.py  test_checkpoint_router.py  test_config_check.py  test_config_manager.py  test_config_router.py  test_config_validator_router.py  test_config_validator_service.py  test_connection_limits_service.py  test_conntrack_router.py  test_conntrack_service.py  test_csv_export_router.py  test_csv_export_service.py  test_dhcp_router.py  test_dhcp_service.py  test_diagnostics_logs_router.py  test_diagnostics_service.py  test_dns_forwarding_router.py  test_dns_forwarding_service.py  test_event_handler_service.py  test_event_router.py  test_events.py  test_firewall_extended.py  test_firewall_groups_service.py  test_firewall_router.py  test_firewall_service.py  test_flow_accounting_service.py  test_flow_router.py  test_fw_groups_router.py  test_health.py  test_injection_guards.py  test_ip_pool_router.py  test_ip_pool_service.py  test_limits_router.py  (+48 more)
