[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dawos-agent"
version = "0.3.0"
description = "PPP router management agent — REST API for accel-ppp BNG nodes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cepat Kilat Teknologi"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "psutil>=5.9,<7",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "slowapi>=0.1.9,<1",
    "python-json-logger>=3,<5",
    "prometheus-client>=0.20,<1",
    "httpx>=0.27",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.scripts]
dawos-agent = "dawos_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/Cepat-Kilat-Teknologi/dawos-agent"
Documentation = "https://cepat-kilat-teknologi.github.io/dawos-agent/"
Repository = "https://github.com/Cepat-Kilat-Teknologi/dawos-agent"
Changelog = "https://github.com/Cepat-Kilat-Teknologi/dawos-agent/blob/main/CHANGELOG.md"
Issues = "https://github.com/Cepat-Kilat-Teknologi/dawos-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "coverage>=7",
]

[tool.setuptools.packages.find]
include = ["dawos_agent*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dawos_agent"]
omit = ["dawos_agent/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.pylint."messages_control"]
# R0801 (duplicate-code) fires on the _run() shell helper that every
# service module defines identically by design.
disable = ["duplicate-code", "too-few-public-methods"]
